NYS-109: Prevent collapsed letter spacing for I Want To block title

--- a/web/themes/custom/nysenate_theme/src/patterns/global/blocks/_blocks.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/global/blocks/_blocks.scss
@@ -883,6 +883,7 @@ p.c-senate-works-step-description {
     text-transform: none;
     font-size: 32px;
     letter-spacing: normal;
+    line-height: normal;
   }
 
   .c-want-to--item {
